<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEj1_1"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="80dp"
        android:text="@string/ej1_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEj1_2"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="48dp"
        android:text="@string/ej1_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEj1_1" />

    <Button
        android:id="@+id/btnEj1_3"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="44dp"
        android:text="@string/ej1_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEj1_2" />
</androidx.constraintlayout.widget.ConstraintLayout>