<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnGasteiz"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="Vitoria_gasteiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBilbao" />

    <Button
        android:id="@+id/btnDonostia"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="Donostia-San Sebastian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGasteiz" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/EL_TIEMPO"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/escoge"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnBilbao"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="Bilbo_bilbao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDatos"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDonostia">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="104dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Tiempo_en"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtLocalidad"
            android:layout_width="263dp"
            android:layout_height="30dp"
            android:text="TextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="391dp"
            android:layout_height="137dp"
            android:layout_marginTop="16dp"
            android:background="#BDBDBD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLocalidad">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/FECHA_HORA"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/TEMPERATURA"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/txtFechaHora"
                android:layout_width="246dp"
                android:layout_height="19dp"
                android:layout_marginStart="12dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <TextView
                android:id="@+id/txtTemperatura"
                android:layout_width="246dp"
                android:layout_height="19dp"
                android:layout_marginStart="8dp"
                android:text="TextView"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imgCielo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:srcCompat="@drawable/i4" />

            <TextView
                android:id="@+id/txtEstadoCielo"
                android:layout_width="122dp"
                android:layout_height="17dp"
                android:layout_marginStart="12dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/imgCielo"
                app:layout_constraintStart_toEndOf="@+id/imgCielo"
                app:layout_constraintTop_toTopOf="@+id/imgCielo"
                app:layout_constraintVertical_bias="0.548" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>